<resources>
    <string name="app_name">LIGHT</string>

    <string name="drawer_open">Menu open</string>
    <string name="drawer_close">Menu closed</string>
    <string name="search">Recherche</string>
    <string name="drawer_frame_layout">DrawerFrameLayout</string>
    <string name="drawer_activity">DrawerActivity</string>

    <string name="connexion">Suivant</string>
    <string name="telephone">Tel</string>
    <string name="account1">Pas encore de compte ?</string>
    <string name="save_you">Enregistre-toi</string>
    <string name="start">Demarrer</string>
    <string name="light">Logo light</string>
    <string name="chargement">Chargement…</string>
    <string name="desc_light">Logiciel de liaison des établissements financiers ayant pour but de les faire communiquer.</string>
    <string name="next">Suivant</string>
    <string name="password">Mot de passe</string>
    <string name="accueil">Accueil</string>
    <string name="transactions">Transactions</string>
    <string name="pointMarchand">Points Marchands</string>
    <string name="Notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="depot">Dépot</string>
    <string name="retrait">Retrait</string>
    <string name="qrcode">Code QR</string>
    <string name="payement">Payement</string>
    <string name="transfert">Transfert</string>
    <string name="partenaires">Partenaires</string>
    <string name="solde">Consulter Solde</string>
    <string name="role">Role</string>
    <string name="categorie">Partenaire</string>
    <string name="historique">Historique</string>
    <string name="impression">Impression</string>
    <string name="configuration">Configuration</string>
    <string name="setting">Configurer votre application</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="typePj">N°CNI</string>
    <string name="email">Email</string>
    <string name="sexe">Sexe</string>
    <string name="masculin">MASCULIN</string>
    <string name="feminin">FEMININ</string>
    <string name="souscrire">Souscrire</string>
    <string name="telExp">Telephone Expéditeur</string>
    <string name="telBenef">Telephone Bénéficiaire</string>
    <string name="montant">Montant</string>
    <string name="valider">Valider</string>
    <string name="subTitle">Light</string>
    <string name="register">Souscription Etape 1</string>
    <string name="register2">Souscription Etape Finale</string>
    <string name="apropos">A Propos</string>
    <string name="homeCodeQR">Accueil Code QR</string>
    <string name="erreurQRcode">Impossible de Scanner le code QR.
 Assurez-vous que vous êtes sur l\'application Light et tentez de scanner à nouveau.</string>
    <string name="monCode">MON CODE</string>
    <string name="scanner">SCANNER</string>
    <string name="partager">Partager</string>
    <string name="erreurSurvenue">Une erreur est survenue lors de l\'envoi des images.</string>
    <string name="erreurSurvenue1">Une erreur est survenue.</string>
    <string name="erreurSurvenue2">Une erreur est survenue lors de la suppression.</string>
    <string name="lightPartarge">Light Partage Code QR</string>
    <string name="lightPartarge1">Light Partage via</string>
    <string name="lightScan">LIGHT SCAN</string>
    <string name="defaultlangue">Langue par défaut</string>
    <string name="francais">Français</string>
    <string name="anglais">Anglais</string>

    <string name="selectedLanguage">Langue déjà sélectionnée!</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="confirmExit">Confirmer la sortie..!!!</string>
    <string name="confirmExitMsg">Êtes-vous sûr de vouloir quitter ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="NotificationsVides">notifications vides</string>
    <string name="supprimer">supprimer</string>
    <string name="rechercher">Recherche</string>
    <string name="encoursSuppression">Encours de Suppression…</string>
    <string name="notifVide">Vos notifications ont été vidé.</string>
    <string name="tutpriel">Tutoriel</string>

    <string name="telephoneCourt">Votre numéro de téléphone est court</string>
    <string name="echecAuthenfication">Echec de l\'authentification</string>
    <string name="insererTelephone">Veuillez inserer votre numéro de téléphone</string>
    <string name="insererPassword">Veuillez inserer le mot de passe</string>
    <string name="passwordCourt">Votre mot de passe est court</string>
    <string name="ouvertureEncours">Ouverture Encours…</string>
    <string name="veuillezInsererNom">S\'il vous plait veuillez inserer votre nom</string>
    <string name="veuillezInsererPrenom">S\'il vous plait veuillez inserer votre prenom</string>
    <string name="veuillezInsererTelephone">S\'il vous plait veuillez inserer votre téléphone</string>
    <string name="veuillezInsererPJ">S\'il vous plait veuillez inserer votre N°Pièce</string>
    <string name="veuillezInsererAdresse">S\'il vous plait veuillez inserer votre email</string>
    <string name="veuillezInsererNumCompte">S\'il vous plait veuillez inserer votre mot de passe</string>
    <string name="networkOnline">Vous êtes connecté à internet</string>
    <string name="networkOffline">Aucune connexion</string>
    <string name="verifierNumero">Votre numéro contient moin de 9 chiffres.</string>
    <string name="add">Ajouter Utilisateur</string>
    <string name="retrait_telephone">Retrait Téléphone</string>
    <string name="veuillezInserer">S\'il vous plait veuillez inserer votre</string>
    <string name="numeroDe">Numéro de</string>
    <string name="votre">Votre</string>
    <string name="votreCarteDeverouille">Votre Carte a été Devérouillé</string>
    <string name="votreCarteVerouille">Votre Carte est verouillé.</string>
    <string name="votreCompteDebite">Votre Compte a été Débité de</string>
    <string name="votreNumCarte">Votre Numéro de Compte est :</string>
    <string name="invalidCararatere">contient un ou plusieurs caractères invalides</string>
    <string name="AlertCategorieListDeroulante">catégorie dans la liste déroulante en actualisant la page de souscription</string>
    <string name="AlertStatutListDeroulante">statut dans la liste déroulante en actualisant la page de souscription.</string>
    <string name="connexionserver">Connexion au server</string>
    <string name="etape1EnvoiDesDonnees">Etape 1: Envoi des Données</string>
    <string name="encoursTelechargement">Encours de Chargement…</string>
    <string name="phone_exp">Veuillez inserer le numéro de l\'expéditeur</string>
    <string name="phone_benef">Veuillez inserer le numéro du Bénéficiaire</string>
    <string name="insererMontant">Veuillez inserer le montant</string>
    <string name="information">Information</string>
    <string name="veuillezInsererPassword">SVP Veuillez Inserer votre mot de passe</string>
    <string name="mdpCourt">Votre mot de passe est court</string>
    <string name="attenteReponseServer">Attente d\'une Réponse </string>
    <string name="annuler">Annuler</string>
    <string name="phone">Téléphone</string>
    <string name="mysolde">Le solde de votre compte est de </string>
    <string name="position">Votre Position</string>
    <string name="point_marchands">Points marchands</string>
    <string name="expediteur">Expéditeur</string>
    <string name="destinataire">Destinataire</string>
    <string name="frais">Frais</string>
    <string name="historiqueVide">Historique des transactions vide</string>
    <string name="terminer">Terminé</string>
    <string name="selectionner">Selectionner</string>
    <string name="verso">verso</string>
    <string name="recto">recto</string>

    <string name="impossibleUsingCamera">Impossible d\'utiliser la caméra .. Veuillez nous autoriser à utiliser la caméra</string>
    <string name="operation_fail">Opération Echoué</string>
    <string name="operation_succss">Opération Success</string>
    <string name="transaction_success">Opération Effectuée avec success</string>
    <string name="operationReussie">Opération Reussie</string>
    <string name="tofGallery">Galerie de photos</string>
    <string name="camera">Camera</string>
    <string name="selectAction">Selectionner une Action</string>
    <string name="identite">informations carte nationale d\'identité</string>
    <string name="delivrance">Delivrance</string>
    <string name="expiration">Expiration</string>
    <string name="dateDelivrance">la Date de délivrance</string>
    <string name="dateExp">la Date d\'expiration</string>
    <string name="insertDateDeliv">Veuillez insérer la date de délivrance</string>
    <string name="insertDateExp">Veuillez insérer la date de d\'expiration</string>
    <string name="retrait_card">Retrait carte</string>
    <string name="totalRecharge">Total recharge</string>
    <string name="totalSend">"Total Envoi "</string>
    <string name="telCallbox">Telephone Callbox</string>
    <string name="telClient">Telephone Client</string>
    <string name="insererPhoneCallbox">Veuillez insérer le numéro du call box</string>
    <string name="insererPhoneClient">Veuillez insérer le numéro du client</string>
    <string name="retraitTel">Retrait téléphone</string>
    <string name="retraitqrcode">Retrait Code QR</string>
    <string name="retraitqrcode1">Retrait Code QR</string>
    <string name="desc_retrait_telephone">Effectuer vos retraits dans les callbox</string>
    <string name="desc_retrait_card">Effectuer vos retraits dans les callbox grace au QR Code</string>
    <string name="profil">profil</string>
    <string name="statistiques">Statistiques</string>
    <string name="accueil_callbox">Accueil Callbox</string>
    <string name="callbox">Call Box</string>
    <string name="toleCallbox">Role: Call Box</string>
    <string name="toleClient">Role: Client</string>
    <string name="lastconnexion">"Dernière Connexion: "</string>
    <string name="invalidCararatere1">votre email est invalid</string>

</resources>