<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">


    <EditText
        android:id="@+id/edit_montant"
        android:textColor="@color/primary_color"
        android:layout_gravity="center"
        android:hint="@string/montant"
        android:imeOptions="actionNext"
        android:paddingTop="10dp"
        android:maxLength="7"
        android:paddingBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="numberSigned"
        android:textStyle="bold"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:textColorHint="@color/primary_color"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/edit_password"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/edit_montant"
        android:textColor="@color/primary_color"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:textColorHint="@color/primary_color"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:imeOptions="actionDone"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/edit_password"
        android:textAlignment="center">

        <Button
            android:id="@+id/btnWithdrawal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_rounded_blue"
            android:padding="10dp"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:paddingEnd="50dp"
            android:paddingRight="50dp"
            android:shadowDx="@android:integer/config_longAnimTime"
            android:text="@string/valider"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>