<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/app_bar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_horizontal_ntb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_gravity="bottom"
        app:layout_behavior=".ui.views.BottomNavigationBehavior"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
            android:id="@+id/top_navigation_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color_secondary_3"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:bnc_mode="inside"
            app:hideOnScroll="true">

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_icon="@drawable/ic_baseline_home_24"
                app:bt_iconHeight="20dp"
                app:bt_iconWidth="20dp"
                app:bt_colorInactive="@color/primary_color"
                app:bt_colorActive="@color/white"
                app:bt_shape="@drawable/bg_background_primary"
                app:bt_title="@string/accueil" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_iconHeight="20dp"
                app:bt_iconWidth="20dp"
                app:bt_colorInactive="@color/primary_color"
                app:bt_colorActive="@color/white"
                app:bt_shape="@drawable/bg_background_primary"
                app:bt_icon="@drawable/ic_baseline_menu_24"
                app:bt_title="@string/statistiques" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_point_marchands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_iconHeight="20dp"
                app:bt_iconWidth="20dp"
                app:bt_colorInactive="@color/primary_color"
                app:bt_colorActive="@color/white"
                app:bt_shape="@drawable/bg_background_primary"
                app:bt_icon="@drawable/ic_baseline_location_on_24"
                app:bt_title="@string/pointMarchand" />
            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_iconHeight="20dp"
                app:bt_iconWidth="20dp"
                app:bt_colorInactive="@color/primary_color"
                app:bt_colorActive="@color/white"
                app:bt_shape="@drawable/bg_background_primary"
                app:bt_icon="@drawable/ic_baseline_notifications_active_24"
                app:bt_badgeText="50"
                app:bt_badgeTextSize="8sp"
                app:bt_badgeTextColor="@color/white"
                app:bt_title="@string/Notifications" />
        </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>